--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 </head>
 
-<body>
-    <div class="valentines-day">
+<body oneClick="PlayAudio()">
+  <div class="valentines-day">
         <div class="envelope"></div>
         <div class="cora"></div>
         <div class="text">Felih <br>14 de <br>Febrero!!</div>
@@ -19,14 +19,16 @@
         <div class="side one"></div>
         <div class="side two">
           <h2>Rubí</h2>
-          <p>Olaaa, Cómo estás????</p>
-          <p>No ha pasado mucho tiempo desde que te conocí, pero ya te ganaste un lugar en mi corazón actualmente. De vdd que estar contigo es algo bn bonito, das una sensación de tranquilidad y felicidad.</p>
-          <p>Ojalá que estes disfrutando tu vida em estos momentos, eres una persona que merece muchísimas cosas, nunca dejes que alguien te haga menos o te haga dudar de tus capacidades, eres una chingona Rubí c:</p>
-          <p>No sé si lo has notado, pero soy una persona a la que le encanta dar regalos JAJAJAQJ, así que el 14 solo es una escusa para hacerle cositas a las personas que aprecio mucho.</p>
-          <p>Para terminar, aquí te dejo una playlist con canciones que me recuerdan a ti o siento que tienen tu vibra.</p>
+          <p>Ojalá que estes disfrutando tu vida en estos momentos Rubí, mereces muchísimas cosas, nunca dejes que alguien te haga menos o te haga dudar de tus capacidades; eres una chingona Rubí c:</p>
+          <p>Te caracterizas por trasmitir una vibra de felicidad y tranquilidad cuando alguien está contigo. Siempre vas a poder contar conmigo, tqmmm</p>
+          <p>Para terminar, aquí te dejo una playlist con canciones que me recuerdan a ti o siento que tienen tu vibra: <a href="https://www.youtube.com/playlist?list=PLHYAGWIKfdtxA1t4LxNKrmNdrz_NDxKLk"> Playlist bn padre.</a></p>
         </div>
       </div>
-      
+
+      <audio  id="audio" autoplay controls loop>
+      <source src="Ojeras.mp3" type="audio/mpeg"> 
+    </audio> 
+
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script  src="script.js"></script>
 
