--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="side one"></div>
         <div class="side two">
           <h2>Rubí</h2>
-          <p>Ojalá que estes disfrutando tu vida en estos momentos Rubí, mereces muchísimas cosas, nunca dejes que alguien te haga menos o te haga dudar de tus capacidades; eres una chingona Rubí c:</p>
-          <p>Te caracterizas por trasmitir una vibra de felicidad y tranquilidad cuando alguien está contigo. Siempre vas a poder contar conmigo, tqmmm</p>
-          <p>Para terminar, aquí te dejo una playlist con canciones que me recuerdan a ti o siento que tienen tu vibra: <a href="https://www.youtube.com/playlist?list=PLHYAGWIKfdtxA1t4LxNKrmNdrz_NDxKLk"> Playlist bn padre.</a></p>
+          <p>Ojalá que estes disfrutando tu vida en estos momentos Rubí. Mereces muchísimas cosas, nunca dejes que alguien te haga menos o te haga dudar de tus capacidades; eres una chingona c:</p>
+          <p>Te caracterizas por trasmitir una vibra de felicidad y tranquilidad cuando alguien está contigo. Agradezco mucho tenerte en mi vida, tqmmm</p>
+          <p>Para terminar, aquí te dejo una playlist con canciones que me recuerdan a ti o siento que suenan como tú: <a href="https://www.youtube.com/playlist?list=PLHYAGWIKfdtxA1t4LxNKrmNdrz_NDxKLk"> Playlist bn padre.</a></p>
         </div>
       </div>
 
